# grounded-graph

./: .gitignore  API.md  CHANGELOG.md  MANUAL.md  README.md  main  pyproject.toml  vision.md
.github/workflows/: publish.yml  python.yml  validate.yml
benchmarks/: RESULTS.md  bench_backends.py  sqlitegraph_index.db
docs/superpowers/specs/: 2026-05-15-broader-edges-tests-for-design.md  2026-05-16-bulk-insert-primitive-design.md  2026-05-16-context-pack-v2-design.md  2026-05-16-java-c-cpp-parsers-design.md
src/grounded_graph/: __init__.py  __main__.py  cli.py  context.py  embedder.py  formatters.py  graph.py  loader.py  query.py  sqlitegraph_backend.py
tests/: test_cli.py  test_cli_sqlitegraph.py  test_context_pack.py  test_embedder.py  test_graph.py  test_loader.py  test_query.py  test_semantic_search.py  test_sqlitegraph_backend.py  test_sqlitegraph_persistence.py
