[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grounded-graph"
version = "0.4.1"
description = "Graph traversal and context queries over grounded-index metadata"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Luiz Spies" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["code-graph", "static-analysis", "context-queries", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "grounded-index>=0.5.0",
    "sqlitegraph>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/oldnordic/grounded-graph"
Repository = "https://github.com/oldnordic/grounded-graph"
"Bug Tracker" = "https://github.com/oldnordic/grounded-graph/issues"
Changelog = "https://github.com/oldnordic/grounded-graph/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=8"]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
grounded-graph = "grounded_graph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grounded_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["src/grounded_graph"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
